syntax="proto3";

import "google/protobuf/empty.proto";

package grpc;

message AddDosenReq{
    string KdDosen = 1;
    string NamaDosen =2;
    int32 Status =3;
    string CreateBy = 4;
}

 
service DosenService{  
    rpc AddDosen(AddDosenReq) returns (google.protobuf.Empty) {};
}